add ping dfcf
